--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,18 +1,20 @@
 project:
   type: website
   output-dir: docs
+  render:
+    - index.qmd
+    - pages/*.qmd  # Automatically render all project pages
 
 website:
-  title: "PSSI Salmon Science Wrap-Up Series"
+  title: "PSSI Salmon Science Speaker Series"
   sidebar:
-    style: "floating"  # or "docked"
+    style: floating
     contents:
-      - text: Home
-        href: index.qmd
-      - text: About
-        href: about.qmd
-      - text: Groundfish Trawl
-        href: 2394_groundfish_trawl.qmd
+      - href: index.qmd
+        text: Home
+      - section: Projects
+        contents:
+          - pages/*.qmd  # Auto-populate sidebar with all project pages
 
 format:
   html:
@@ -21,4 +23,3 @@ format:
     toc: true
 
 editor: visual
-
