--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,19 +8,14 @@ render:
 
 website:
   title: "PSSI Salmon Science Speaker Series"
-  sidebar:
-    style: floating
-    contents:
+  navbar:
+    left:
       - href: index.qmd
         text: Home
-      - section: Projects
-        contents:
-          - pages/*.qmd  # Auto-populate sidebar with all project pages
 
 format:
   html:
-    theme: cosmo
-    css: styles.css
-    toc: true
+    css: styles.css  # Enable your custom stylesheet
+    theme: default   # Optional: use Quarto's default theme as a base
 
 editor: visual
