--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,8 @@ website:
 
 format:
   html:
-    css: styles.css  # Enable your custom stylesheet
-    theme: default   # Optional: use Quarto's default theme as a base
-
-editor: visual
+    theme: default
+    css: styles.css
+    toc: false            # Disable TOC on index page if sidebar is used
+    page-layout: custom   # Enables sidebar layout globally
+    embed-resources: true # Ensures calendar widget and styles are bundled
